# SDL2-GNUBoy

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  Version  build-gnuboy-appimage.sh  makefile  makefile.linux  makefile.mingw  makefile.osx  makefile.windows  package.sh  sdl2-setup.sh  sdl2gnuboy-serial-io  sdl2gnuboy-timed-network  yellow.sav
.github/workflows/: nix.yml  osx.yml  windows-build.yml
docs/: CONFIG  CREDITS  README  SDL2-CHANGES  makefile.emc
include/: mem.h  sys.h
rc/: amo-gnuboy.rc  gnuboy-palettes.rc  gnuboy.rc.sample  sample-rc-commands.txt  sdl2gnuboy-palettes.rc
src/: cpu.c  emu.c  exports.c  io.c  joytest.c  lcd.c  loader.c  main.c  mem.c  rccmds.c
sys/dummy/: io.c
sys/nix/: io_network.c  io_none.c  io_pipe.c  nix.c
sys/sdl2/: sdl-audio.c  sdl-input.c  sdl-joy.c  sdl-video.c  sdl.c
sys/windows/: windows.c
